Fix hero spacing

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
 
 .hero {
     color: white;
-    min-height: 100dvh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
